--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "express": "^4.19.2",
     "express-flash": "^0.0.2",
     "express-session": "^1.18.0",
+    "md5": "^2.3.0",
     "method-override": "^3.0.0",
     "mogoose": "^0.0.1-security",
     "mongoose": "^8.3.4",
+    "mongoose-slug-updater": "^3.3.0",
     "multer": "^1.4.5-lts.1",
     "pug": "^3.0.2",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "streamifier": "^0.1.1",
+    "tinymce": "^7.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
