--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "md5": "^2.3.0",
     "method-override": "^3.0.0",
     "mogoose": "^0.0.1-security",
+    "moment": "^2.30.1",
     "mongoose": "^8.3.4",
     "mongoose-slug-updater": "^3.3.0",
     "multer": "^1.4.5-lts.1",
