--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^8.3.4",
     "mongoose-slug-updater": "^3.3.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
     "pug": "^3.0.2",
     "session": "^0.1.0",
     "streamifier": "^0.1.1",
